# RNA-prediction-SU-Challenge

./: .gitignore  pyproject.toml
rna_challenge/: data_loader.py  dataset.py  encoding.py  error.py  main.py  mixed_precission.py  model.py  sampler.py  utils.py
